# xyRenderOpenGL

./: .clang-format  .gitignore  CMakeLists.txt  build.bat
shader/: defualt.fs  defualt.vs
src/: camera.cpp  camera.h  common.h  main copy.cppbak  main.cpp  node.cpp  node.h  renderInterface.cpp  renderInterface.h  shaderManager.cpp  shaderManager.h  transform.cpp  transform.h
